<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_dgnss</name>
  <version>0.2.0</version>
  <description>Provides a ublox_dgnss node for a u-blox GPS DGNSS receiver using Gen 9 UBX Protocol</description>
  <author>Nick Hortovanyi</author>
  <maintainer email="nick@aussierobots.com">nick</maintainer>
  <license>Apache License, Version 2.0</license>

  <url>https://github.com/aussierobots/ublox_dgnss</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ublox_dgnss_node</exec_depend>
  <exec_depend>ublox_ubx_msgs</exec_depend>
  <exec_depend>ublox_ubx_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
