<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_nav_sat_fix_hp_node</name>
  <version>0.4.4</version>
  <description>Provides a NavSatFix node for a u-blox GPS GNSS receiver using Gen 9 UBX Protocol</description>
  <maintainer email="geoff.s@cmpeng.com.au">Geoff Sokoll</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ublox_ubx_msgs</depend>
  <depend>ublox_ubx_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
