<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_ubx_interfaces</name>
  <version>0.4.4</version>
  <description>UBLOX UBX Interfaces</description>
  <maintainer email="nick@aussierobots.com.au">Nick Hortovanyi</maintainer>
  <license>Apache License, Version 2.0</license>

  <url>https://github.com/aussierobots/ublox_dgnss</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <depend>builtin_interfaces</depend> -->
  <!-- <depend>std_msgs</depend> -->
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
